--- a/MvcApplication8/MvcApplication8/Views/Home/Index.cshtml
+++ b/MvcApplication8/MvcApplication8/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
             <!--<a href="javascript:;" onclick="ClickUpvote(@item.Id)">         <!--需要修改母版<a>的样式-->
             <!--    <img id="imgup" src="~/Images/thumb.png" style="width:18px;height:17px" /> </a>-->
 
-            <img id=@item.imgId src="~/Images/thumb.png" style="width:18px;height:17px" 
+            <img src="~/Images/thumb.png" style="width:18px;height:17px"        @*id=@item.imgId*@
                  onclick="ClickUpvote(@item.Id)" />
 
         </td>
