--- a/MvcApplication8/MvcApplication8/Views/Home/Index.cshtml
+++ b/MvcApplication8/MvcApplication8/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 <!--<link href="~Content/Xml2Model_index.css" type="text/css" rel="stylesheet" />-->
 <script src="~/Scripts/jquery-1.7.1.js" type="text/javascript"></script>
 <script src="~/Scripts/upvote.js" type="text/javascript"></script>
-
+<script src="~/Scripts/showdesc.js" type="text/javascript"></script>
 
 
 
@@ -44,17 +44,17 @@
             <!--<a href="javascript:;" onclick="ClickUpvote(@item.Id)">         <!--需要修改母版<a>的样式-->
             <!--    <img id="imgup" src="~/Images/thumb.png" style="width:18px;height:17px" /> </a>-->
 
-            <img src="~/Images/thumb.png" style="width:18px;height:17px"        @*id=@item.imgId*@
+            <img class="voteimage" src="~/Images/thumb.png" style="width: 18px; height: 17px;opacity: 0.4;"        @*id=@item.imgId*@
                  onclick="ClickUpvote(@item.Id)" />
 
         </td>
 		
-		<td>
-            <span id=@item.Id>@Html.DisplayFor(modelItem => item.totalLike)</span>      <!--直接让itemId作为id-->
+		<td >
+            <span id=@item.Id >+@Html.DisplayFor(modelItem => item.totalLike)</span>      <!--直接让itemId作为id-->
         </td>      
 
-        <td>
-          <a href="@Html.DisplayFor(modelItem => item.guid)" target="_blank">@Html.DisplayFor(modelItem => item.title)</a>  
+        <td width="700" class="desc" >
+            @Html.DisplayFor(modelItem => item.title)
         </td>
        
         <td>
@@ -62,6 +62,21 @@
         </td>
         
     </tr>
+    <tr id=@item.Id style="display: none;" class="hidden">
+        <td></td>
+
+        <td></td>
+
+        <td style="outline: thin solid black;">
+            <a href="@Html.DisplayFor(modelItem => item.guid)" target="_blank">@Html.DisplayFor(modelItem => item.title)</a>
+            <br />
+            @Html.DisplayFor(modelItem => item.description)
+        </td>
+
+        <td></td>
+
+    </tr>
+
 }
 
 </table>
