--- a/NewsFeed/NewsFeed/Views/Home/Index.cshtml
+++ b/NewsFeed/NewsFeed/Views/Home/Index.cshtml
@@ -7,9 +7,19 @@
 <!--<link href="~Content/Xml2Model_index.css" type="text/css" rel="stylesheet" />-->
 <script src="~/Scripts/jquery-1.8.2.js" type="text/javascript"></script>
 <script src="~/Scripts/upvote.js" type="text/javascript"></script>
+<script src="~/Scripts/articleDetail.js" type="text/javascript"></script>
+
+<style>
+    .keyword {
+        padding: 0px 2px;
+        background: #cfc;
+        border: 2px solid #9c9;
+    }
+</style>
 
 <h2>Index</h2>
 
+<span class="keyword" onclick="showDetail(12)">key</span>
 
 <table>
     <tr>
