完成TF-IDF的计算，下一步，把排序前三的keyword存进article表。

--- a/NewsFeed/NewsFeed/Views/Home/Index.cshtml
+++ b/NewsFeed/NewsFeed/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 
 <h2>Index</h2>
 
-<span class="keyword" onclick="showDetail(12)">key</span>
+<span class="keyword" onclick="showDetail">key</span>
 
 <table>
     <tr>
