初步完成关键词的显示，未分开显示

--- a/NewsFeed/NewsFeed/Views/Home/Index.cshtml
+++ b/NewsFeed/NewsFeed/Views/Home/Index.cshtml
@@ -19,8 +19,6 @@
 
 <h2>Index</h2>
 
-<span class="keyword" onclick="showDetail">key</span>
-
 <table>
     <tr>
         <th>
@@ -80,6 +78,8 @@
             </td>
 
             <td>
+                <span class="keyword">@Html.DisplayFor(modelItem => item.keyword)</span>
+                <br />
                 <a href="@Html.DisplayFor(modelItem => item.guid)" target="_blank">@Html.DisplayFor(modelItem => item.title)</a>
                 <br />
                 @Html.DisplayFor(modelItem => item.description)
