--- a/NewsFeed/NewsFeed/Views/Home/Index.cshtml
+++ b/NewsFeed/NewsFeed/Views/Home/Index.cshtml
@@ -78,7 +78,7 @@
             </td>
 
             <td>
-                <span class="keyword">@Html.DisplayFor(modelItem => item.keyword)</span>
+                <span class="keyword">@Html.DisplayFor(modelItem => item.keyword)</span>      <!--还是存3个直接-->
                 <br />
                 <a href="@Html.DisplayFor(modelItem => item.guid)" target="_blank">@Html.DisplayFor(modelItem => item.title)</a>
                 <br />
